sna: Tweak TearFree interaction with Present flipping

When Present takes over we mark the TearFree shadow as disabled. Before
Present relinquishes its flip sequence, it copies from its pixmap to the
screen triggering the shadow wait, even though the screeen Pixmap is not
current bound (and still marked as disabled). Tweak the conditionals to
properly skip this wait.

References: https://bugs.freedesktop.org/show_bug.cgi?id=92873
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>